--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charsv et="utf-8">
   <title>Rentacar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
